sonarr-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: sonarr
  annotations:
    linkerd.io/inject: enabled
