sonarr-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarr
  labels:
    app: sonarr
    part-of: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
      part-of: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        part-of: sonarr
    spec:
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr:3.0.8
        ports:
        - name: sonarr
          containerPort: 8989
        volumeMounts:
        - name: sonarr
          mountPath: /config
        - name: series
          mountPath: /series
        - name: animes
          mountPath: /animes
        - name: downloads
          mountPath: /downloads/series
        resources:
          limits:
            memory: 250Mi
          requests:
            memory: 200Mi
        readinessProbe:
          tcpSocket:
            port: sonarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: sonarr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: sonarr
        persistentVolumeClaim:
          claimName: sonarr
      - name: series
        persistentVolumeClaim:
          claimName: series
      - name: animes
        persistentVolumeClaim:
          claimName: animes
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
