sonarr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: sonarr
  selector:
    app: sonarr
    part-of: sonarr
